cloud-server/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-server
  namespace: default
spec:
  selector:
    app: cloud-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
