cloud-server/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cloud-server
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: api.bitmediacentre.club
    http:
      paths:
      - path: /
        backend:
          serviceName: cloud-server
          servicePort: 8080
  tls:
  - hosts:
    - api.bitmediacentre.club
    secretName: letsencrypt-secret
